[package]
name = "pallet-cross-chain"
version = "1.0.0"
authors = [""]
edition = "2021"
license = "Unlicense"
publish = false
description = "Pallet pallet-eos-vtb-contract which enlist business logic of eos system"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde_derive = "0.9"

[dependencies.primitive-types]
default-features = false
version = "0.11.1"
features = ["serde_no_std", "codec"]

[dependencies.pallet-vtbdex]
default-features = false
path = '../vtbdex'
version = '1.0.0'

[dependencies.serde]
default-features = false
version = "1.0.100"
features = ["derive"]

[dependencies.serde_json]
default-features = false
version = "1.0.45"
features = ["alloc"]

[dependencies.codec]
package = "parity-scale-codec"
default-features = false
version = "3.0.0"

[dependencies.scale-info]
default-features = false
version = "2.0.1"
features = ["derive"]

[dependencies.log]
default-features = false
version = '0.4.14'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '6.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '6.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'
optional = true

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dev-dependencies.pallet-usd-rate]
default-features = false
path = '../usd-rate'
version = '1.0.0'

[features]
default = ["std"]
runtime-benchmarks = ['frame-benchmarking']
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"serde/derive",
	"pallet-vtbdex/std",
	'frame-benchmarking/std',
]
try-runtime = ["frame-support/try-runtime"]