[package]
name = "pallet-vtbc-token"
version = "1.0.0"
authors = [""]
edition = "2021"
license = "Unlicense"
publish = false
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde_derive = "0.9"
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }

[dependencies.log]
default-features = false
version = '0.4.14'

[dependencies.primitive-types]
default-features = false
version = "0.11.1"
features = ["serde_no_std", "codec"]

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"serde/derive"
]
try-runtime = ["frame-support/try-runtime"]
