[package]
name = "pallet-vtbdex"
version = "1.0.0"
authors = [""]
edition = "2021"
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde_derive = "0.9"
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }

[dependencies.rustc-hex]
version = "2.1.0"
default-features = false

[dependencies.pallet-vtbc-token]
default-features = false
path = '../vtbc-token'
version = '1.0.0'

[dependencies.pallet-usd-rate]
default-features = false
path = '../usd-rate'
version = '1.0.0'

[dependencies.primitive-types]
default-features = false
version = "0.11.1"
features = ["serde_no_std", "codec"]

[dependencies.scale-info]
default-features = false
version = "2.0.1"
features = ["derive"]

[dependencies.log]
default-features = false
version = '0.4.14'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.pallet-vtbt]
default-features = false
path = '../vtbt'
version = '1.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '6.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '6.0.0'
#features = ["disable_oom", "disable_panic_handler"]

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '6.0.0'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.js-sys]
default-features = false
version = "0.3.55"

[dependencies.libm]
default-features = false
version = "0.2.1"

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'

[dependencies.bs58]
default-features = false
version = "0.4.0"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.24"
version = '4.0.0-dev'
optional = true


[features]
default = ["std"]
runtime-benchmarks = ['frame-benchmarking']
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"serde/derive",
	"pallet-usd-rate/std",
	"pallet-vtbc-token/std",
	"sp-api/std",
	"pallet-timestamp/std",
	"bs58/std",
	"rustc-hex/std",
	'frame-benchmarking/std',
]
try-runtime = ["frame-support/try-runtime"]
